--- a/src/jupiter/CONDITION.ipynb
+++ b/src/jupiter/CONDITION.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "\t\t<td>Revision </td> <td>0.1</td>\n",
        "\t</tr>\n",
        "    <tr>\n",
-       "\t\t<td>Date </td> <td> 04 April 2025 13:23</td>\n",
+       "\t\t<td>Date </td> <td> 04 April 2025 13:43</td>\n",
        "\t</tr>\n",
        "</table>"
       ],
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
     "spec[\"TESTFUNCTION\"] = spec[\"TESTFUNCTION\"].apply(\n",
     "    lambda x: apply_template(x, templates) if \"(\" in x else x\n",
     ")\n",
-    "spec[\"TESTFUNCTION\"] = spec[\"TESTFUNCTION\"].str.replace(\"\\n\", \"\")\n",
+    "spec[\"TESTFUNCTION\"] = spec[\"TESTFUNCTION\"].str.replace(\"\\n\", \"<br>\")\n",
     "spec[\"PATTERN\"] = spec[\"PATTERN\"].str.replace(\", \", \",<br>\")\n",
     "spec[\"TESTNR\"] = spec[\"TESTNR\"].astype(int)\n",
     "spec[\"HB\"] = spec[\"HB\"].astype(str).replace(\"0\", \"-\")\n",
@@ -866,9 +866,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no_method_found\n",
+      "ftrim_ser ( <br>target:=       48.2, <br>trim_pin:=     pa15, <br>nbits:=        5, <br>start_vector:= 20, <br>vec_per_bit:=  1, <br>lsb_first:=    1, <br>meas_pin:=     pb8, <br>nsamples:=     8192, <br>store_var:=    16, <br>limit_min:=    46.2, <br>limit_max:=    49.7, <br>divider:=      8, <br>method:=       linear, <br>rising_curve:= 1, <br>signed_curve:= 0, <br>burst_index:=  1, <br>lookup:=       , <br>openpins:=      <br>)\n",
+      "no_method_found\n",
+      "ftrim_ser ( <br>target:=       48.2, <br>trim_pin:=     pa15, <br>nbits:=        5, <br>start_vector:= 20, <br>vec_per_bit:=  1, <br>lsb_first:=    1, <br>meas_pin:=     pb8, <br>nsamples:=     8192, <br>store_var:=    16, <br>limit_min:=    46.2, <br>limit_max:=    49.7, <br>divider:=      8, <br>method:=       linear, <br>rising_curve:= 1, <br>signed_curve:= 0, <br>burst_index:=  1, <br>lookup:=       , <br>openpins:=      <br>)\n",
+      "no_method_found\n",
+      "functest ( <br>compare_block:= default_cb<br>)\n",
+      "functest ( <br>compare_block:= default_cb<br>)\n",
+      "no_method_found\n",
+      "functest ( <br>compare_block:= default_cb<br>)\n",
+      "functest ( <br>compare_block:= default_cb<br>)\n",
+      "no_method_found\n",
+      "functest ( <br>compare_block:= default_cb<br>)\n",
+      "functest ( <br>compare_block:= default_cb<br>)\n",
+      "no_method_found\n",
+      "functest ( <br>compare_block:= default_cb<br>)\n",
+      "functest ( <br>compare_block:= default_cb<br>)\n",
+      "fmeas ( <br>dut_pin:=   pb8, <br>limit_min:= 46.754, <br>limit_max:= 49.646, <br>vector:=    , <br>nsamples:=  8192, <br>divider:=   8, <br>store_var:= , <br>openpins:=   <br>)\n",
+      "fmeas ( <br>dut_pin:=   pb8, <br>limit_min:= 46.754, <br>limit_max:= 49.646, <br>vector:=    , <br>nsamples:=  8192, <br>divider:=   8, <br>store_var:= , <br>openpins:=   <br>)\n",
+      "search_event ( <br>pin_name:=      pb8, <br>edge_type:=     rise, <br>limit_min:=     1000, <br>limit_max:=     10000, <br>store_var:=     , <br>openpins:=       <br>)\n",
+      "functest ( <br>compare_block:= default_cb<br>)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1053,7 +1079,7 @@
        "        <td>56</td>\n",
        "        <td>Analog</td>\n",
        "        <td>hsi_trimres</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `ftrim_ser ( target:=       48.2, trim_pin:=     pa15, nbits:=        5, start_vector:= 20, vec_per_bit:=  1, lsb_first:=    1, meas_pin:=     pb8, nsamples:=     8192, store_var:=    16, limit_min:=    46.2, limit_max:=    49.7, divider:=      8, method:=       linear, rising_curve:= 1, signed_curve:= 0, burst_index:=  1, lookup:=       , openpins:=      )`, true)\" onmouseout=\"hide_overlay()\">ftrim_ser </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `ftrim_ser ( <br>target:=       48.2, <br>trim_pin:=     pa15, <br>nbits:=        5, <br>start_vector:= 20, <br>vec_per_bit:=  1, <br>lsb_first:=    1, <br>meas_pin:=     pb8, <br>nsamples:=     8192, <br>store_var:=    16, <br>limit_min:=    46.2, <br>limit_max:=    49.7, <br>divider:=      8, <br>method:=       linear, <br>rising_curve:= 1, <br>signed_curve:= 0, <br>burst_index:=  1, <br>lookup:=       , <br>openpins:=      <br>)`, true)\" onmouseout=\"hide_overlay()\">ftrim_ser </td></tr>\n",
        "    <tr>\n",
        "        <td>204000</td>\n",
        "        <td>SET_TRIM_RES_OSC</td>\n",
@@ -1177,7 +1203,7 @@
        "        <td>56</td>\n",
        "        <td>Analog</td>\n",
        "        <td>hsi_trimcopy</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `ftrim_ser ( target:=       48.2, trim_pin:=     pa15, nbits:=        5, start_vector:= 20, vec_per_bit:=  1, lsb_first:=    1, meas_pin:=     pb8, nsamples:=     8192, store_var:=    16, limit_min:=    46.2, limit_max:=    49.7, divider:=      8, method:=       linear, rising_curve:= 1, signed_curve:= 0, burst_index:=  1, lookup:=       , openpins:=      )`, true)\" onmouseout=\"hide_overlay()\">ftrim_ser </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `ftrim_ser ( <br>target:=       48.2, <br>trim_pin:=     pa15, <br>nbits:=        5, <br>start_vector:= 20, <br>vec_per_bit:=  1, <br>lsb_first:=    1, <br>meas_pin:=     pb8, <br>nsamples:=     8192, <br>store_var:=    16, <br>limit_min:=    46.2, <br>limit_max:=    49.7, <br>divider:=      8, <br>method:=       linear, <br>rising_curve:= 1, <br>signed_curve:= 0, <br>burst_index:=  1, <br>lookup:=       , <br>openpins:=      <br>)`, true)\" onmouseout=\"hide_overlay()\">ftrim_ser </td></tr>\n",
        "    <tr>\n",
        "        <td>206000</td>\n",
        "        <td>FLHA_SET_ECONF3_EWS1</td>\n",
@@ -1301,7 +1327,7 @@
        "        <td>16</td>\n",
        "        <td>1MEngiOptOtp</td>\n",
        "        <td>flhmem_pwr_up ram_fing_dcc_hp_a ram_fins_enga_ahb_econf3_ews1 flhmem_pg_edata flhmem_er_match flhmem_eot_pass</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( compare_block:= default_cb)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( <br>compare_block:= default_cb<br>)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
        "    <tr>\n",
        "        <td>3008000</td>\n",
        "        <td>FLHA_RD_ECONF3_EWS1</td>\n",
@@ -1363,7 +1389,7 @@
        "        <td>16</td>\n",
        "        <td>1MEngiOptOtp</td>\n",
        "        <td>flhmem_pwr_up ram_fing_hp_a ram_fins_enga_ahb_econf3_ews1 flhmem_rd_edata flhmem_rd_match flhmem_eot_pass</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( compare_block:= default_cb)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( <br>compare_block:= default_cb<br>)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
        "    <tr>\n",
        "        <td>208000</td>\n",
        "        <td>FLHA_SET_ECONF4_EWS1</td>\n",
@@ -1487,7 +1513,7 @@
        "        <td>16</td>\n",
        "        <td>1MEngiOptOtp</td>\n",
        "        <td>flhmem_pwr_up ram_fing_dcc_hp_a ram_fins_enga_ahb_econf4_ews1 flhmem_pg_edata flhmem_er_match flhmem_eot_pass</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( compare_block:= default_cb)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( <br>compare_block:= default_cb<br>)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
        "    <tr>\n",
        "        <td>3010000</td>\n",
        "        <td>FLHA_RD_ECONF4_EWS1</td>\n",
@@ -1549,7 +1575,7 @@
        "        <td>16</td>\n",
        "        <td>1MEngiOptOtp</td>\n",
        "        <td>flhmem_pwr_up ram_fing_hp_a ram_fins_enga_ahb_econf4_ews1 flhmem_rd_edata flhmem_rd_match flhmem_eot_pass</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( compare_block:= default_cb)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( <br>compare_block:= default_cb<br>)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
        "    <tr>\n",
        "        <td>210000</td>\n",
        "        <td>FLHA_SET_ECONF4</td>\n",
@@ -1673,7 +1699,7 @@
        "        <td>16</td>\n",
        "        <td>1MEngiOptOtp</td>\n",
        "        <td>flhmem_pwr_up ram_fing_dcc_hp_a ram_fins_enga_ahb_econf4 flhmem_pg_edata flhmem_er_match flhmem_eot_pass</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( compare_block:= default_cb)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( <br>compare_block:= default_cb<br>)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
        "    <tr>\n",
        "        <td>3012000</td>\n",
        "        <td>FLHA_RD_ECONF4</td>\n",
@@ -1735,7 +1761,7 @@
        "        <td>16</td>\n",
        "        <td>1MEngiOptOtp</td>\n",
        "        <td>flhmem_pwr_up ram_fing_hp_a ram_fins_enga_ahb_econf4 flhmem_rd_edata flhmem_rd_match flhmem_eot_pass</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( compare_block:= default_cb)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( <br>compare_block:= default_cb<br>)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
        "    <tr>\n",
        "        <td>212000</td>\n",
        "        <td>FLHA_SET_ECONF3</td>\n",
@@ -1859,7 +1885,7 @@
        "        <td>16</td>\n",
        "        <td>1MEngiOptOtp</td>\n",
        "        <td>flhmem_pwr_up ram_fing_dcc_hp_a ram_fins_enga_ahb_econf3 flhmem_pg_edata flhmem_er_match flhmem_eot_pass</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( compare_block:= default_cb)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( <br>compare_block:= default_cb<br>)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
        "    <tr>\n",
        "        <td>3014000</td>\n",
        "        <td>FLHA_RD_ECONF3</td>\n",
@@ -1921,7 +1947,7 @@
        "        <td>16</td>\n",
        "        <td>1MEngiOptOtp</td>\n",
        "        <td>flhmem_pwr_up ram_fing_hp_a ram_fins_enga_ahb_econf3 flhmem_rd_edata flhmem_rd_match flhmem_eot_pass</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( compare_block:= default_cb)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( <br>compare_block:= default_cb<br>)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
        "    <tr>\n",
        "        <td>3015000</td>\n",
        "        <td>MEAS_OBL_OSC48</td>\n",
@@ -1983,7 +2009,7 @@
        "        <td>56</td>\n",
        "        <td>Analog</td>\n",
        "        <td>hsi_prebody hsi_osc48_obl</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `fmeas ( dut_pin:=   pb8, limit_min:= 46.754, limit_max:= 49.646, vector:=    , nsamples:=  8192, divider:=   8, store_var:= , openpins:=   )`, true)\" onmouseout=\"hide_overlay()\">fmeas </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `fmeas ( <br>dut_pin:=   pb8, <br>limit_min:= 46.754, <br>limit_max:= 49.646, <br>vector:=    , <br>nsamples:=  8192, <br>divider:=   8, <br>store_var:= , <br>openpins:=   <br>)`, true)\" onmouseout=\"hide_overlay()\">fmeas </td></tr>\n",
        "    <tr>\n",
        "        <td>3016000</td>\n",
        "        <td>MEAS_OBL_OSC144</td>\n",
@@ -2045,7 +2071,7 @@
        "        <td>-</td>\n",
        "        <td>-</td>\n",
        "        <td>hsi_osc144_obl</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `fmeas ( dut_pin:=   pb8, limit_min:= 46.754, limit_max:= 49.646, vector:=    , nsamples:=  8192, divider:=   8, store_var:= , openpins:=   )`, true)\" onmouseout=\"hide_overlay()\">fmeas </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `fmeas ( <br>dut_pin:=   pb8, <br>limit_min:= 46.754, <br>limit_max:= 49.646, <br>vector:=    , <br>nsamples:=  8192, <br>divider:=   8, <br>store_var:= , <br>openpins:=   <br>)`, true)\" onmouseout=\"hide_overlay()\">fmeas </td></tr>\n",
        "    <tr>\n",
        "        <td>3017000</td>\n",
        "        <td>SEARCH_READY_OSC</td>\n",
@@ -2107,7 +2133,7 @@
        "        <td>56</td>\n",
        "        <td>Analog</td>\n",
        "        <td>hsi_osc_ready</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `search_event ( pin_name:=      pb8, edge_type:=     rise, limit_min:=     1000, limit_max:=     10000, store_var:=     , openpins:=       )`, true)\" onmouseout=\"hide_overlay()\">search_event </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `search_event ( <br>pin_name:=      pb8, <br>edge_type:=     rise, <br>limit_min:=     1000, <br>limit_max:=     10000, <br>store_var:=     , <br>openpins:=       <br>)`, true)\" onmouseout=\"hide_overlay()\">search_event </td></tr>\n",
        "    <tr>\n",
        "        <td>3018000</td>\n",
        "        <td>SEARCH_READY_OSC_KERON</td>\n",
@@ -2169,7 +2195,7 @@
        "        <td>56</td>\n",
        "        <td>Analog</td>\n",
        "        <td>hsi_osc_ready_hsikeron</td>\n",
-       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( compare_block:= default_cb)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
+       "    <td style=\"text-decoration: underline;\" onmouseover=\"show_overlay(event, 'Test Function', `functest ( <br>compare_block:= default_cb<br>)`, true)\" onmouseout=\"hide_overlay()\">functest </td></tr>\n",
        "    </tbody>\n",
        "</table>\n",
        "\n",
@@ -2207,7 +2233,7 @@
        "    }\n",
        "\n",
        "    function hide_overlay() {\n",
-       "        document.getElementById('generic_overlay').style.display = 'none';\n",
+       "        document.getElementById('generic_overlay').style.display = 'block';\n",
        "    }\n",
        "\n",
        "    // Associa le funzioni agli elementi globali per poterle chiamare dall'HTML\n",
@@ -2301,7 +2327,7 @@
     "for index, row in spec.iterrows():\n",
     "    function_name = row[\"TESTFUNCTION\"].split(\"(\")[0]\n",
     "    function_details = row[\"TESTFUNCTION\"]\n",
-    "\n",
+    "    print(function_details)\n",
     "    html += f\"\"\"\n",
     "    <tr>\n",
     "        <td>{row['TESTNR']}</td>\n",
@@ -2370,7 +2396,7 @@
     "    }\n",
     "\n",
     "    function hide_overlay() {\n",
-    "        document.getElementById('generic_overlay').style.display = 'none';\n",
+    "        document.getElementById('generic_overlay').style.display = 'block';\n",
     "    }\n",
     "\n",
     "    // Associa le funzioni agli elementi globali per poterle chiamare dall'HTML\n",
