before data load

--- a/src/jupiter/CONDITION.ipynb
+++ b/src/jupiter/CONDITION.ipynb
@@ -477,7 +477,7 @@
     "            lambda match: parts.pop(0) if parts else \"\",\n",
     "            template_body[i],\n",
     "        )\n",
-    "    # print(template_body)\n",
+    "    \n",
     "    return \"\\n\".join(template_body)\n",
     "\n",
     "\n",
@@ -527,15 +527,8 @@
     "spec[\"LEVELSPECS\"] = spec[\"LEVELSPECS\"].apply(generate_html_table_from_string)\n",
     "spec[\"TIMINGSPECS\"] = spec[\"TIMINGSPECS\"].apply(generate_html_table_from_string)\n",
     "display(Markdown(\"## Test Condition\"))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
     "\n",
     "html = \"\"\"\n",
     "<style>\n",
@@ -668,7 +661,7 @@
     "    }\n",
     "\n",
     "    function hide_overlay() {\n",
-    "        document.getElementById('generic_overlay').style.display = 'block';\n",
+    "        document.getElementById('generic_overlay').style.display = 'none';\n",
     "    }\n",
     "\n",
     "    // Associa le funzioni agli elementi globali per poterle chiamare dall'HTML\n",
